[gd_scene load_steps=8 format=3 uid="uid://da2b73383isem"]

[ext_resource type="Script" path="res://addons/inventory-system/ui/inventory_system_ui.gd" id="2_ci0ph"]
[ext_resource type="PackedScene" uid="uid://1dijqt6vr078" path="res://addons/inventory-system/ui/inventory_ui.tscn" id="3_sohfg"]
[ext_resource type="Script" path="res://addons/inventory-system/ui/transaction_slot.gd" id="3_ugeom"]
[ext_resource type="PackedScene" uid="uid://dq1rob2nkb0cb" path="res://addons/inventory-system/ui/slot_ui.tscn" id="4_5h6ud"]
[ext_resource type="Script" path="res://addons/inventory-system/ui/hotbar_ui.gd" id="7_e17fd"]
[ext_resource type="PackedScene" uid="uid://doyklj58bvj21" path="res://addons/inventory-system/ui/interactor/interactor_ui.tscn" id="7_vn7uk"]
[ext_resource type="PackedScene" uid="uid://cci6dwxmbapt1" path="res://addons/inventory-system/ui/craft/craft_station_ui.tscn" id="10_qjsje"]

[node name="Inventory System UI" type="Control" node_paths=PackedStringArray("player_inventories_ui")]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_ci0ph")
player_inventories_ui = [NodePath("PlayerInventoryUI"), NodePath("EquipmentInventoryUI")]

[node name="InteractorUI" parent="." instance=ExtResource("7_vn7uk")]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
mouse_filter = 2

[node name="TransactionSlotUI" parent="." instance=ExtResource("4_5h6ud")]
modulate = Color(1, 1, 1, 0.752941)
z_index = 1
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
mouse_filter = 1
script = ExtResource("3_ugeom")

[node name="Panel" parent="TransactionSlotUI" index="1"]
self_modulate = Color(1, 1, 0.541176, 1)

[node name="DropIcon" type="TextureRect" parent="TransactionSlotUI"]
layout_mode = 0
offset_left = 48.0
offset_top = 48.0
offset_right = 66.0
offset_bottom = 66.0

[node name="DropArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerInventoryUI" parent="." instance=ExtResource("3_sohfg")]
layout_mode = 1
offset_left = 52.0
offset_top = 11.0
offset_right = 488.0
offset_bottom = 255.0

[node name="LootInventoryUI" parent="." instance=ExtResource("3_sohfg")]
custom_minimum_size = Vector2(436, 140)
layout_mode = 1
offset_left = -429.0
offset_top = 11.0
offset_right = 7.0
offset_bottom = 151.0

[node name="EquipmentInventoryUI" parent="." instance=ExtResource("3_sohfg")]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
offset_left = 52.0
offset_top = -90.0
offset_right = 280.0
offset_bottom = 6.0

[node name="HotbarUI" type="Control" parent="." node_paths=PackedStringArray("slots_container")]
texture_filter = 1
custom_minimum_size = Vector2(234, 78)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -213.0
offset_top = -78.0
offset_right = 213.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("7_e17fd")
slot_ui_scene = ExtResource("4_5h6ud")
slots_container = NodePath("Control/UI Inventory")

[node name="Control" type="Control" parent="HotbarUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UI Inventory" type="GridContainer" parent="HotbarUI/Control"]
layout_mode = 2
offset_left = 4.0
offset_top = 20.0
offset_right = 4.0
offset_bottom = 20.0
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 8

[node name="PlayerCraftStationUI" parent="." instance=ExtResource("10_qjsje")]
layout_mode = 1
view_input_inventory = false
view_output_inventory = false

[node name="OtherCraftStationUI" parent="." instance=ExtResource("10_qjsje")]
layout_mode = 1
view_output_inventory = false

[node name="SlotClick" type="AudioStreamPlayer" parent="."]
volume_db = -12.0

[node name="SlotDrop" type="AudioStreamPlayer" parent="."]
volume_db = -12.0

[connection signal="mouse_entered" from="DropArea" to="TransactionSlotUI" method="_on_drop_area_mouse_entered"]
[connection signal="mouse_exited" from="DropArea" to="TransactionSlotUI" method="_on_drop_area_mouse_exited"]

[editable path="TransactionSlotUI"]
[editable path="PlayerInventoryUI"]
